--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,10 @@ dependencies:
   provider: ^6.0.5
   http: ^0.13.5
   flutter_spinkit: ^5.1.0
+  date_field: ^3.0.0
+  intl: ^0.17.0
+  dropdown_button2: ^2.0.0
+  flutter_svg: ^0.22.0
   
 
 dev_dependencies:
@@ -64,6 +68,8 @@ flutter:
   # included with your application, so that you can use the icons in
   # the material Icons class.
   uses-material-design: true
+  assets: 
+    - assets/images/
 
   # To add assets to your application, add an assets section, like this:
   # assets:
