--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,7 @@ dependencies:
   http: ^0.13.5
   flutter_spinkit: ^5.1.0
   dropdown_button2: ^2.0.0
+  flutter_svg: ^1.1.6
   
 
 dev_dependencies:
